back: some deploy and front changes