@@ -186,9 +186,9 @@ class ManagerControllerTest {
         Order createdOrder = mc.createOrder(simpleOrderRegistration);
         String filePath = pdfService.generateCommercial(createdOrder);
 
-        assert(Files.exists(Path.of(filePath)));
+        assert(Files.exists(Paths.get(filePath)));
 
-        Files.delete(Path.of(filePath));
+        Files.delete(Paths.get(filePath));
 //        ResponseEntity<InputStreamResource> result  = mc.get_commercial(createdOrder.getId());
 //        byte[] content = result.getBody().getInputStream().readAllBytes();
 //        for (byte i: content
@@ -209,9 +209,9 @@ class ManagerControllerTest {
         Order createdOrder = mc.createOrder(simpleOrderRegistration);
         String filePath = pdfService.generateRiskList(createdOrder);
 
-        assert(Files.exists(Path.of(filePath)));
+        assert(Files.exists(Paths.get(filePath)));
 
-        Files.delete(Path.of(filePath));
+        Files.delete(Paths.get(filePath));
     }
 
     @Test
@@ -241,12 +241,12 @@ class ManagerControllerTest {
         createdOrder = orderRepository.getOne(createdOrder.getId());
         Order finalCreatedOrder = createdOrder;
         assertAll(
-                ()->assertTrue(Files.exists(Path.of("confirmation/"+Objects.requireNonNull(response.getBody()).getFileName()))),
+                ()->assertTrue(Files.exists(Paths.get("confirmation/"+Objects.requireNonNull(response.getBody()).getFileName()))),
                 ()-> assertEquals(finalCreatedOrder.getConfirmation(), Objects.requireNonNull(response.getBody()).getFileName())
 
         );
 
-        Files.delete(Path.of("confirmation/"+Objects.requireNonNull(response.getBody()).getFileName()));
+        Files.delete(Paths.get("confirmation/"+Objects.requireNonNull(response.getBody()).getFileName()));
     }
 
 
